Try to fix tmijs loading

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My bot</title>
     <script src="/config.js"></script>
-    <script src="//cdn.tmijs.org/js/1.5.0/tmi.min.js" crossorigin="anonymous"></script>
+    <script src="/deps/tmi.min.js"></script>
   </head>
   <body>
     <audio id="player" />
