--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>My bot</title>
-    <script src="/config.js"></script>
-    <script src="/deps/tmi.min.js"></script>
+    <script src="./config.js"></script>
+    <script src="./deps/tmi.min.js"></script>
   </head>
   <body>
     <audio id="player" />
@@ -120,7 +120,7 @@
           cooldown['tracks'][command] = now;
           cooldown['command'] = now;
 
-          player.src = tracks[idx]['file'];
+          player.src = `./${tracks[idx]['file']}`;
           player.play()
             .then(() => {
               isPlaying = true;
